--- a/utamihon.html
+++ b/utamihon.html
@@ -304,7 +304,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=rZKQe4M8GmU">セカイ</a><br/>
 <a href="https://www.youtube.com/watch?v=UoSmAT4uzPE">セカイはまだ始まってすらいない</a><br/>
 セツナトリップ<br/>
-刹那プラス<br/>
+<a href="https://www.youtube.com/watch?v=NKyTooLrFQo">刹那プラス</a><br/>
 千本桜<br/>
         <br/>
         <br/>
