--- a/utamihon.html
+++ b/utamihon.html
@@ -464,6 +464,7 @@ Hello､ 星を数えて<br/>
 <a href="https://www.youtube.com/watch?v=e0n1S2bh-Rw">プラスティック・ラブ</a><br/>
 ブラック★ロックシューター<br/>
 ブリキノダンス<br/>
+<a href="https://www.youtube.com/watch?v=cebJCHJ8pSE">ブループラネット</a><br/>
 ぶる~べりぃ♥とれいん<br/>
 <a href="https://www.youtube.com/watch?v=qIeS_rMoQH4">ブレス・ユア・ブレス</a><br/>
 <a href="https://www.youtube.com/watch?v=eGDBowXlGsA">プロトディスコ</a><br/>
