--- a/internallink.html
+++ b/internallink.html
@@ -8,13 +8,13 @@
 ================================================================================<br>
 <br>
 <a href="https://hospinfo-enuei-city.org/">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､</a><br>
-<a href="https://hospinfo-enuei-city.org/en-dex">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【英語】</a><br>
-<a href="https://hospinfo-enuei-city.org/ko-dex">Ti9BIO2VtOuLuSDsl4bsnYw【韓国語】</a><br>
+<a href="https://hospinfo-enuei-city.org/en-dex">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【EN】</a><br>
+<a href="https://hospinfo-enuei-city.org/ko-dex">Ti9BIO2VtOuLuSDsl4bsnYw【KO】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/utamihon">歌見本</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/notice404">江縫栄市立総合病院からのお知らせ（改正）</a><br>
-<a href="https://hospinfo-enuei-city.org/notice404-k">江縫栄市立総合病院からのお知らせ（改正）【韓国語】</a><br>
+<a href="https://hospinfo-enuei-city.org/notice404-k">江縫栄市立総合病院からのお知らせ（改正）【KO】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
 <br>
