--- a/internallink.html
+++ b/internallink.html
@@ -14,7 +14,7 @@
 <a href="https://hospinfo-enuei-city.org/utamihon">歌見本</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/notice404">江縫栄市立総合病院からのお知らせ（改正）</a><br>
-<a href="https://hospinfo-enuei-city.org/notice404-k">江縫栄市立総合病院からのお知らせ（改正）【KO】</a><br>
+<a href="https://hospinfo-enuei-city.org/notice404-k">엔에이 시립 종합병원에서 알려드립니다. （개정판）【KO】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
 <br>
