--- a/insidemail55.html
+++ b/insidemail55.html
@@ -6,6 +6,7 @@
 
 
 ================================================================================<br>
+<br>
 19██年10月22日　23:41:45<br>
 宛先：研究主任L<br>
 題名：005の件について<br>
@@ -20,7 +21,7 @@
 それも空白の概念をですよ。<br>
 だって人類において一大事な概念の一つではありませんか。<br>
 万が一流失することでもあったら大変ですよ。<br>
-それと、遺伝子を提供して頂いた██夫妻にこの事は報せてあるのですか。<br>
+それと、遺伝子を提供して頂いた外峯夫妻にこの事は報せてあるのですか。<br>
 <br>
 研究補助T<br>
 <br>
