--- a/internallink.html
+++ b/internallink.html
@@ -17,6 +17,7 @@
 <a href="https://hospinfo-enuei-city.org/notice404-k">엔에이 시립 종합병원에서 알려드립니다. （개정판）【KO】</a><br>
 <br>
 <a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
+<a href="https://hospinfo-enuei-city.org/insidemail55-k">보안 인가를 확인하십시오.【KO】</a><br>
 <br>
 <br>
 ================================================================================<br>
