Update and rename icu.html to hovel.html

--- a/hovel.html
+++ b/hovel.html
@@ -14,32 +14,21 @@
     <button type="button" onclick="go()"> 確認する </button>
 
     <div id="innerdiv">
-罪悪感は感じる必要がないということを、まず伝えておきたいの。<br>
-私はただ生きているのが苦手だった。<br>
-こんなことを書いている時点でそうでしょう。<br>
-「憂鬱な時大事な決定をするな」って言葉があるから、ずっと我慢したけど、<br>
-これ以上はもう耐えられない。<br>
-今更こうしたって無駄だってことを私は知っている。<br>
-私がいなかったように生きてほしいと言っても、それができるわけないよね？<br>
-全部わかってるから。思う存分ショック受けて、
-<br>思う存分私の最低な決定を罵っていいよ。<br><br>
-
-一人くらいは来るでしょう、まあ来ても来なくても確認取れるわけないか。<br>
-ドレスコードはレッド・ブラックがいいの。<br>
-赤いものを一つ着るか着けるか、持ってくるなりしてね。<br>「赤い」ものなら何でもいいんだよ。マルクスの本も可。<br>
-<br>
-鬱症と十数年一緒に暮らすのも大変だった。<br>
-大体鬱症という言葉そのものが憂鬱よ。<br>
-人の知能を食べて育つ病だし。<br>
-毎朝、毎日が過ぎるたびに私の知能と感覚が落ちるのを実感するのに、<br>誰がそれでも生きたいと思うだろうか？<br> 毎日が絶望で先が真っ暗で、<br>私は何もできないゴミという無能感の中で、到底無理でしょう。<br><br>
-否定しても無駄、私は何もできない人間の屑でした。<br>周りのせいじゃなくて、ただ自分自身がそうであるだけ。<br>どこの子として生まれても、私はきっと能無しだったはず。<br>
-5回やってやっと成功した貴重な実験体が実は失敗作だったなんて！<br>それをずっと隠してきててとても申し訳ない限りね。<br>
-<br>
-あとは何がいいかな？<br>
-うーん……私だって、愛してたよ。<br>
-死後の世界、そんなものはあってはならないの。<br>
-死んだら何もかも終わるってのに。<br>
-死んでも尚生きたいだ？冗談じゃないわ。<br>
+================================================================================<br>
+2023年8月14日 00:23:01　　　　　　　　　　　　　　　　　　　　　 作成　外峯 零<br>
+================================================================================<br>
+廃墟暮らしの頃は覚えてるだけ無駄らしい？
+それってさ、ちょっと酷い話だと思わないこと？
+ずっとお世話になった荒ら屋も可哀想だし。
+其処で過ごした時間も無駄ではないし。
+私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。
+もう私同様、存在しない場所になってしまったけどね。
+江縫栄に来てから偶に訪ねたりするの。
+ここは存在しなくなったモノが集まる街だから。
+市街というか、死骸ね。
+長い間の記憶は残念ながら無いけど、私を構成するにあたって、
+私の廃墟がすこぶる影響を与えたのは間違いなく事実です。
+だからね、無駄だなんて思いたくないわ。
 <br>
 疲れた。<br>
 休む。<br>
