--- a/hovel.html
+++ b/hovel.html
@@ -30,10 +30,6 @@
 私の廃墟がすこぶる影響を与えたのは間違いなく事実です。
 だからね、無駄だなんて思いたくないわ。
 <br>
-疲れた。<br>
-休む。<br>
-<br>
-私の名前は嫌いよ。<br>
 <br>
 <br>
 </div>
@@ -42,7 +38,7 @@
 
     <script type="text/javascript">
       var time =10000
-      var ICU = ["淋","し","い","独","り","遺","さ","な","い","で"]
+      var ICU = ["み","て","る","よ"]
       var as ="div1"
       var counter=0;
       var flag=0;
@@ -88,7 +84,7 @@
           if(flag==0)
           {
             setTimeout("var a=1",60000)
-            document.write("<div>まだいるんですか？何を期待してるの？</strong>  </div>")
+            document.write("<div>よっぽど憶えられたいらしい、随分と変わったお方だこと。良いでしょう、おぼえておくね</strong>  </div>")
             flag=flag+1
             sleep(6000)
            
