--- a/hovel.html
+++ b/hovel.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>contained</title>
-        <meta name="contained" content="noindex">
+        <meta name="観てるよ" content="noindex">
 <body style="font-family: monospace;">
    <div id="div1">
 
