--- a/hovel.html
+++ b/hovel.html
@@ -17,25 +17,23 @@
 ================================================================================<br>
 2023年8月14日 00:23:01　　　　　　　　　　　　　　　　　　　　　 作成　外峯 零<br>
 ================================================================================<br>
-廃墟暮らしの頃は覚えてるだけ無駄らしい？
-それってさ、ちょっと酷い話だと思わないこと？
-ずっとお世話になった荒ら屋も可哀想だし。
-其処で過ごした時間も無駄ではないし。
-私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。
-もう私同様、存在しない場所になってしまったけどね。
-江縫栄に来てから偶に訪ねたりするの。
-ここは存在しなくなったモノが集まる街だから。
-市街というか、死骸ね。
-長い間の記憶は残念ながら無いけど、私を構成するにあたって、
-私の廃墟がすこぶる影響を与えたのは間違いなく事実です。
-だからね、無駄だなんて思いたくないわ。
+廃墟暮らしの頃は覚えてるだけ無駄らしい？<br>
+それってさ、ちょっと酷い話だと思わないこと？<br>
+ずっとお世話になった荒ら屋も可哀想だし。<br>
+其処で過ごした時間も無駄ではないし。<br>
+私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。<br>
+もう私同様、存在しない場所になってしまったけどね。<br>
+江縫栄に来てから偶に訪ねたりするの。<br>
+ここは存在しなくなったモノが集まる街だから。<br>
+市街というか、死骸ね。<br>
+長い間の記憶は残念ながら無いけど、私を構成するにあたって、<br>
+私の廃墟がすこぶる影響を与えたのは間違いなく事実です。<br>
+だからね、無駄だなんて思いたくないわ。<br>
 <br>
 <br>
 <br>
 </div>
-
      </div>
-
     <script type="text/javascript">
       var time =10000
       var ICU = ["み","て","る","よ"]
