--- a/hovelp.html
+++ b/hovelp.html
@@ -34,8 +34,9 @@
 <br>
 </div>
      </div>
+
     <script type="text/javascript">
-      var time =5000
+      var time =10000
       var ICU = ["み","て","る","よ"]
       var as ="div1"
       var counter=0;
@@ -67,8 +68,8 @@
           var content=str.split("")
           var cache = Random(content.length)
 
-          for(i=0;i<10;i++){content[cache+i]=ICU[i]}
-          if(time>=50) time=time-500
+          for(i=0;i<4;i++){content[cache+i]=ICU[i]}
+          if(time>=100) time=time-1000
           else counter++
           if (counter>50000) {throw new Error("stop here");}
           document.getElementById(as).innerHTML = content.join("")
@@ -81,11 +82,10 @@
         {
           if(flag==0)
           {
-            setTimeout("var a=1",50000)
-            document.write("<div>よっぽど憶えられたいらしい、随分と変わったお方だこと。良いでしょう、おぼえておくね</strong>  </div>")
+            setTimeout("var a=1",10000)
+            document.write("<div>よっぽど憶えられたいらしい、随分と変わったお方だこと。良いでしょう、おぼえておくね</div>")
             flag=flag+1
-            sleep(4000)
-           
+            sleep(5000)
           }
         }
       }
