--- a/internallink.html
+++ b/internallink.html
@@ -19,6 +19,8 @@
 <a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
 <a href="https://hospinfo-enuei-city.org/insidemail55-k">보안 인가를 확인하십시오.【KO】</a><br>
 <br>
+<a href="https://hospinfo-enuei-city.org/hovelp">観てるよ</a><br>
+<br>
 <br>
 ================================================================================<br>
 内側リンク集<br>
