--- a/guideline.html
+++ b/guideline.html
@@ -57,8 +57,8 @@ In the case of Fan artwork, may use your artwork from Gaine Null's side. Please 
 성적인 표현을 주로 하는 이용, AI 학습을 금합니다.<br>
 Using for Erotic Entertainment Services, Generating AI image are STRICTLY PROHIBITED.<br>
 --------------------------------------------------------------------------------<br>
-・切り抜き作っていい？
-・Can I make your highlight Clip Video?
+・切り抜き作っていい？<br>
+・Can I make your highlight Clip Video?<br>
 --------------------------------------------------------------------------------<br>
 収益化せず・コメントオフの条件付きで、ご自由にお使いください。<br>
 수익을 내지 않음, 댓글 비허가 조건 하에, 자유롭게 사용 가능합니다.<br>
