--- a/guideline.html
+++ b/guideline.html
@@ -29,33 +29,40 @@ Gaine Null takes NO responsibility for any issues related to that.<br>
 <br>
 アダルトな目的としての利用・AI学習は固く禁じます。<br>
 성적인 표현을 주로 하는 이용, AI 학습을 금합니다.<br>
-Using for Erotic Entertainment Services, Generating AI voice are STRICTLY PROHIBITED.<br>
+Using for Erotic Entertainment Services, <br>
+	Generating AI voice are STRICTLY PROHIBITED.<br>
 <br>
 署名/宣伝/布教/勧誘/売名/顕示目的での利用は、お控えください。<br>
 서명, 선전, 포교, 권유, 마케팅 등의 목적으로 이용하는 것을 금합니다.<br>
 Please DO NOT use for the purpose of signing / promotion / solicitation / publication.<br>
 <br>
-上記を含め法令で規制されている以外に「性的な表現を除いて」使用する作品の表現、内容などに制約はありません。<br>
-위 항목을 포함한, 법률로 금지된 것 외의, "성적인 표현을 제외하고" 작품의 표현이나 내용 등에 제약은 두지 않습니다.<br>
-In addition to being regulated by law, there are no restrictions on the expression or content of the work used,<br>
+上記を含め法令で規制されている以外に「性的な表現を除いて」<br>
+使用する作品の表現、内容などに制約はありません。<br>
+위 항목을 포함한, 법률로 금지된 것 외의, "성적인 표현을 제외하고"<br>
+작품의 표현이나 내용 등에 제약은 두지 않습니다.<br>
+In addition to being regulated by law, there are no restrictions<br>
+on the expression or content of the work used,<br>
 as long as it is not sexual expression.<br>
 --------------------------------------------------------------------------------<br>
 ・外峯零のファン作品が作りたい！<br>
 ・I wanna make artwork of Gaine Null!<br>
 --------------------------------------------------------------------------------<br>
-外峯零のキャラクターデザイン、独自の世界観設定などは個人・非営利の利用のみ許可します。<br>
+外峯零のキャラクターデザイン、独自の世界観設定などの利用は<br>
+個人・非営利の利用のみ許可します。<br>
 その他の場合は別途連絡ください。<br>
 FAの場合、此方から使わせて頂くことがありますので、ご了承ください。<br>
-가이네 누르의 캐릭터 디자인, 독자적 세계관 설정 등은 개인적, 비영리적 이용에 한해 허가합니다.<br>
+가이네 누르의 캐릭터 디자인, 독자적 세계관 설정 등은<br>
+개인적, 비영리적 이용에 한해 이용을 허가합니다.<br>
 그 외의 이용에는 별도로 연락 주세요.<br>
 팬아트의 경우, 제 쪽에서 사용할 수 있습니다. 부디 양해 바랍니다.<br>
-Gaine Null's character designs, unique worldview settings, etc. are permitted for personal, Non-Commercial use only.<br>
+Gaine Null's character designs, unique worldview settings, etc. <br>
+are permitted for personal, Non-Commercial use only.<br>
 For other purposes, please contact Gaine Null.<br>
-In the case of Fan artwork, may use your artwork from Gaine Null's side. Please understanding.<br>
+In the case of Fan artwork, may use your artwork<br>from Gaine Null's side. Please understanding.<br>
 <br>
 アダルトな目的としての利用・AI学習は固く禁じます。<br>
 성적인 표현을 주로 하는 이용, AI 학습을 금합니다.<br>
-Using for Erotic Entertainment Services, Generating AI image are STRICTLY PROHIBITED.<br>
+Using for Erotic Entertainment Services, <br>Generating AI image are STRICTLY PROHIBITED.<br>
 --------------------------------------------------------------------------------<br>
 ・切り抜き作っていい？<br>
 ・Can I make your highlight Clip Video?<br>
@@ -63,7 +70,7 @@ Using for Erotic Entertainment Services, Generating AI image are STRICTLY PROHIB
 収益化せず・コメントオフの条件付きで、ご自由にお使いください。<br>
 수익을 내지 않음, 댓글 비허가 조건 하에, 자유롭게 사용 가능합니다.<br>
 Please feel free to use!<br>
-Just provided that, do not make any profit from Gaine Null's video, and keep comments OFF.<br>
+Just provided that, do not make any profit from Gaine Null's video, <br>and keep comments OFF.<br>
 <br>
 --------------------------------------------------------------------------------<br>
 --------------------------------------------------------------------------------<br>
