--- a/guideline.html
+++ b/guideline.html
@@ -34,7 +34,7 @@ Using for Erotic Entertainment Services, <br>
 <br>
 署名/宣伝/布教/勧誘/売名/顕示目的での利用は、お控えください。<br>
 서명, 선전, 포교, 권유, 마케팅 등의 목적으로 이용하는 것을 금합니다.<br>
-Please DO NOT use for the purpose of signing / promotion / solicitation / publication.<br>
+DO NOT use for the purpose of signing / promotion / solicitation / publication.<br>
 <br>
 上記を含め法令で規制されている以外に「性的な表現を除いて」<br>
 使用する作品の表現、内容などに制約はありません。<br>
