--- a/guideline.html
+++ b/guideline.html
@@ -9,6 +9,7 @@
 <br>
 --------------------------------------------------------------------------------<br>
 ・外峯 零の歌ってみた音源は使ってもいいですか？<br>
+・커버곡 음원을 사용해도 될까요?<br>
 ・Can I use Gaine Null vocal cover song?<br>
 --------------------------------------------------------------------------------<br>
 <br>
@@ -45,6 +46,7 @@ on the expression or content of the work used,<br>
 as long as it is not sexual expression.<br>
 --------------------------------------------------------------------------------<br>
 ・外峯零のファン作品が作りたい！<br>
+・팬아트(형태불문) 만들고 싶어요!<br>
 ・I wanna make artwork of Gaine Null!<br>
 --------------------------------------------------------------------------------<br>
 外峯零のキャラクターデザイン、独自の世界観設定などの利用は<br>
@@ -65,6 +67,7 @@ In the case of Fan artwork, may use your artwork<br>from Gaine Null's side. Plea
 Using for Erotic Entertainment Services, <br>Generating AI image are STRICTLY PROHIBITED.<br>
 --------------------------------------------------------------------------------<br>
 ・切り抜き作っていい？<br>
+・방송 클립따도 되나요<br>
 ・Can I make your highlight Clip Video?<br>
 --------------------------------------------------------------------------------<br>
 収益化せず・コメントオフの条件付きで、ご自由にお使いください。<br>
