--- a/utamihon.html
+++ b/utamihon.html
@@ -53,6 +53,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 <a href="https://www.youtube.com/watch?v=dmnxSO5TXFI">アイデンティティ</a><br/>
 <a href="https://www.youtube.com/watch?v=oNklN1EdeVU">アイドル</a>・<a href="https://www.youtube.com/watch?v=2dNEWm2K_Rs">Idol</a><br/>
 アイネクライネ<br/>
+<a href="https://www.youtube.com/watch?v=JPNG9925W8E">あいのうた</a><br/>
 <a href="https://www.youtube.com/watch?v=sTIH_ikTSK4">アイノマテリアル</a><br/>
 <a href="https://www.youtube.com/watch?v=kqr0V8db3V4">愛迷エレジー</a><br/>
 <a href="https://www.youtube.com/watch?v=bb56iYUFskw">アイラ</a><br/>
@@ -428,6 +429,7 @@ siGrE<br/>
 猫屋敷心中事件<br/>
 ネジと歯車とプライド<br/>
 <a href="https://www.youtube.com/watch?v=ebhNf_mTy4I">熱異常</a><br/>
+<a href="https://www.youtube.com/watch?v=LEHx0gQgmDg">熱風</a><br/>
 <a href="https://www.youtube.com/watch?v=Zhsl0nVFNaQ">ネムラネーゼ</a><br/>
         <br/>
         <br/>
@@ -455,6 +457,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=9aSpaUb7I6M">初音ミクの消失</a><br/>
 ハッピーシンセサイザ<br/>
 罰ゲーム<br/>
+<a href="https://www.youtube.com/watch?v=FuCG3NH_JRU">抜錨</a><br/>
 <a href="https://www.youtube.com/watch?v=Szqxd-yyWug">花に風</a><br/>
 <a href="https://www.youtube.com/watch?v=lz10LdfpvFY">花丸◎日和！</a><br/>
 <a href="https://www.youtube.com/watch?v=6Q1-BoBK79M">花を唄う</a><br/>
@@ -610,7 +613,7 @@ Mrs.Pumpkinの滑稽な夢<br/>
         <br/>
         <br/>
 <h3>ら</h3><br/>
-ライアーダンサー<br/>
+<a href="https://www.youtube.com/watch?v=5Ja8VyBmhGY">ライアーダンサー</a><br/>
 ライアーダンス<br/>
 <a href="https://www.youtube.com/watch?v=rJlN36ipJKQ">ラグトレイン</a><br/>    
 <a href="https://www.youtube.com/watch?v=khXN8gWqvko">ラストダンス</a><br/>
@@ -782,6 +785,7 @@ soundless voice<br/>
 START:DASH!!<br/>
 <a href="https://soundcloud.com/not-sotomine/still-for-your-love">Still for your love</a><br/>
 Sugar Sweet Nightmare<br/>
+<a href="https://www.youtube.com/watch?v=1DC6uhjDScw">Summering</a><br/>
 SUNNY DAY SONG<br/>
 Sweet Devil<br/>
 <a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><a href="https://www.youtube.com/watch?v=8Cp8hyhXj7g"（MMD）</a><br/>
