--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
       <div class="nav">
         <ul>
           <li><a href="#">紹介</a></li>
-          <li><a href="#">利用規約</a></li>
-          <li><a href="#">図書館</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
           <li><a href="#">関連情報</a></li>
           <li><a href="#">連絡所</a></li>
           <li><a href="#">お問い合わせ</a></li>
