--- a/main.html
+++ b/main.html
@@ -3,23 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>江縫栄市立総合病院</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
   </head>
   <body>
-    <header> 
-        <h1 class="logo">
-          <a href="index.html"></a>
-        </h1>
-        <div  class="search">
-          <input class="search-text" type="text"  placeholder="検索語を入力します"  onkeyup="enterkeySearch()"/>
-          <button class="search-btn" type="submit"></button>
-        </div>
+    <header>
+      <h1 class="logo">
+        <a href="index.html"></a>
+      </h1>
+      <div class="search">
+        <input class="search-text" type="text" placeholder="検索語を入力します" />
+        <button class="search-btn" type="submit"></button>
+      </div>
     </header>
     <div class="nav">
       <ul>
@@ -33,16 +28,15 @@
     </div>
     <main>
       <div class="info">
-        <div class="text"> 
-          <p id="text1">市民の心身の安寧と、回復</p><br>
-          <p id="text2">健康の為日々邁進して参ります</p></div>
+        <div class="text">
+          <p id="text1">市民の心身の安寧と、回復</p>
+          <p id="text2">健康の為日々邁進して参ります</p>
+        </div>
       </div>
     </main>
-    <footer> 
+    <footer>
       <p>© 2011 CU1000 N/A City General Hospital, All rights reserved.</p>
-      <button id="page-top" onclick="backToTop()">
-        ▲ TOP
-      </button>
+      <button id="page-top">▲ TOP</button>
     </footer>
   </body>
 </html>
